Primeira versao +ou- estavel

--- a/src/main/resources/intellitesting.properties
+++ b/src/main/resources/intellitesting.properties
@@ -1,3 +1,2 @@
 intellitesting.levels=rapido,devagar-importante,devagar
-intellitesting.timings=3,6,10
-intellitesting.levels.standard=rapido
+intellitesting.durations=3sec,6sec,2min
