--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,19 @@
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>intellitesting-core</name>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>**/Level1Suite.class</include>
+					</includes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -13,5 +26,19 @@
 			<version>4.8</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>cpsuite</groupId>
+			<artifactId>cpsuite</artifactId>
+			<version>1.2.5</version>
+		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>http://maven.xwiki.org</id>
+			<url>http://maven.xwiki.org/externals</url>
+		</repository>
+	</repositories>
+
 </project>
