--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 coverage/*
-codecover/*
+Cov/*
 bin/*
 target
 .classpath
 .project
 .settings
+.resources/
+.sessions.html
 cpsuite-1.2.5.jar
-
+jsoup-1.7.3.jar
