--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="/home/bcc/pestana/Documents/adaptsuite/cpsuite-1.2.5.jar"/>
 	<classpathentry kind="lib" path="/home/bcc/pestana/Documents/adaptsuite/jsoup-1.8.1.jar"/>
+	<classpathentry kind="lib" path="/home/bcc/pestana/Documents/adaptsuite/opencsv-3.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
