--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>cpsuite</artifactId>
 			<version>1.2.5</version>
 		</dependency>
+		<dependency>
+    		<groupId>net.sf.opencsv</groupId>
+		    <artifactId>opencsv</artifactId>
+    		<version>3.5</version>
+		</dependency
 	</dependencies>
 
 	<repositories>
