--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 bin/
 Cov/
+Files/
 adaptsuite.jar
 cpsuite-1.2.5.jar
 jsoup-1.8.*.jar
@@ -13,3 +14,5 @@ opencsv-3.5.jar
 .classpath
 .project
 adaptsuite.csv
+*.csv
+Results.xlsx
