--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
 			<version>4.8</version>
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>cpsuite</groupId>
 			<artifactId>cpsuite</artifactId>
@@ -34,9 +33,14 @@
 		</dependency>
 		<dependency>
     		<groupId>net.sf.opencsv</groupId>
-		    <artifactId>opencsv</artifactId>
-    		<version>3.5</version>
-		</dependency
+    		<artifactId>opencsv</artifactId>
+    		<version>2.3</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.jsoup</groupId>
+    		<artifactId>jsoup</artifactId>
+    		<version>1.7.2</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
